# NUCLEO-G431KB-WheelSensor

./: .clangd  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  MCUViewer_imu_test.cfg  MCUViewer_sensor_test.cfg  NUCLEO-G431KB-WheelSensor.ioc  README.md  STM32G431KBTx_FLASH.ld  stm32g431kbtx_flash.ld
Core/Inc/: fdcan.h  imu.h  kalman_state.h  main.h  platform.h  stm32_assert.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tof.h  usart.h
Core/Src/: fdcan.c  gpio.c  i2c.c  imu.c  kalman_state.c  main.c  platform.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  syscalls.c  system_stm32g4xx.c  tof.c  usart.c
Drivers/VL53L4CD_ULD_Driver/: VL53L4CD_api.c
Drivers/VL53L4CD_ULD_Driver/Inc/: VL53L4CD_api.h  VL53L4CD_calibration.h
Kalman_Filter/: CMakeLists.txt  kalman_state.c
Kalman_Filter/include/: kalman_state.h
Kalman_Filter/tests/: CMakeLists.txt  test1.c
State/: CMakeLists.txt  state.c
State/include/: state.h
State/tests/: CMakeLists.txt  test1.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
